--- a/Mission5/src/main/resources/application.properties
+++ b/Mission5/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=jdbc:h2:tcp://localhost/~/springboot
+# jdbc:h2:tcp://localhost/~/springboot
 spring.datasource.username=sa
 spring.datasource.password=
 
